trying to  creat my navigation screen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,12 @@ target 'learn_react_native' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'learn_react_nativeTests' do
     inherit! :complete
     # Pods for testing
