--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "learn_react_native",
-  "displayName": "learn_react_native"
+  "name": "event_manager",
+  "displayName": "event_manager"
 }
