--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -194,6 +194,9 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation project(':react-native-linear-gradient')//implementint linear gradient to my andriod app
+
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
