--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Event_manager",
+  "name": "event_manager",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,7 +18,13 @@
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-dropdown-autocomplete-textinput": "^1.0.1",
+    "react-native-dropdown-list": "^0.3.0",
+    "react-native-dropdown-select": "^1.0.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.0.7",
