--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.9.0",
+    "react-native-restart": "0.0.17",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
