some adjustment in the app files

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "event_manager",
-  "displayName": "event_manager"
+  "name": "learn-react_native",
+  "displayName": "learn-react_native"
 }
