changed the android app icon and made some adjust to the android files

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "learn-react_native",
-  "displayName": "learn-react_native"
+  "name": "schedule app",
+  "displayName": "schedule app"
 }
