--- a/package.json
+++ b/package.json
@@ -16,18 +16,15 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
+    "jetifier": "^1.6.6",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dropdown-autocomplete-textinput": "^1.0.1",
-    "react-native-dropdown-list": "^0.3.0",
-    "react-native-dropdown-select": "^1.0.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.9.0",
-    "react-native-restart": "0.0.17",
-    "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-navigation": "^4.4.0"
