--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.4",
@@ -17,6 +18,7 @@
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
     "jetifier": "^1.6.6",
+    "lodash": "^4.17.19",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dropdown-autocomplete-textinput": "^1.0.1",
