--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "jetifier": "^1.6.6",
     "lodash": "^4.17.19",
     "react": "16.11.0",
