fixed the fswatch and dotenv err

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -85,6 +85,8 @@ target 'learn_react_native' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'learn_react_nativeTests' do
     inherit! :complete
     # Pods for testing
