--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dropdown-autocomplete-textinput": "^1.0.1",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
@@ -30,7 +31,8 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
-    "react-navigation": "^4.4.0"
+    "react-navigation": "^4.4.0",
+    "rn-nodeify": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.3",
