--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "6.8.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
+    "react-native-dotenv": "^2.3.0",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
