--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.8.4",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.6.2",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "jetifier": "^1.6.6",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
+    "node-fetch": ">=2.6.1",
     "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react-native": "^0.63.2",
     "react-native-dropdown-autocomplete-textinput": "^1.0.1",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^3.0.7",
-    "react-native-screens": "^2.9.0",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-safe-area-context": "^3.1.7",
+    "react-native-screens": "^2.10.1",
     "react-navigation": "^4.4.0",
     "rn-nodeify": "^10.2.0"
   },
@@ -42,7 +43,7 @@
     "eslint": "6.8.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
-    "react-native-dotenv": "^2.3.0",
+    "react-native-dotenv": "^2.4.0",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
